Implement LiquidacionToll management: add LiquidacionTollResponseDto for detailed toll liquidation data; update repositories and services to support new liquidacion functionalities; enhance Concentrado and Lotes handling with liquidacion integration; create LiquidacionIngenioController and LiquidacionSocioController for toll liquidation operations.